fix alignment

--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -25,21 +25,27 @@ footer {
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+.parent-container {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+}
 .search-container {
     display: flex;
     justify-content: center;
 }
 .search-container input {
     width:90%;
+    flex: 1;
+}
+.lblRecipe {
+    text-align: left;
 }
 .line {
     margin-top: 15px;
     border-bottom: 1px solid black;
 }
 @media screen and (max-width: 600px) {
-    .lblRecipe {
-        margin-left: 12px;
-    }
     #results {
         display: flex;
         flex-direction: column;
@@ -53,9 +59,6 @@ h1 {
     }
 }
 @media screen and (min-width: 1000px) {
-    .lblRecipe {
-        margin-left: 46px;
-    }
     .recipe {
         display: flex;
         justify-content: center;
